[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "fastapi-jwt-auth>=0.5.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "passlib[bcrypt]>=1.7.4",
    "uvicorn>=0.42.0",
]
