[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "passlib[argon2,bcrypt]>=1.7.4",
    "uvicorn>=0.42.0",
    "async-fastapi-jwt-auth>=0.6.6",
    "argon2-cffi>=25.1.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
